<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xuping_Counter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_view">View</string>
    <string name="title_activity_single__view">Single_View</string>
    <string name="title_activity_rename">Rename</string>
    <string name="note">Counters are sorted by counts from low to high</string>
    <string name="MM">Main Menu</string>
    <string name="instruction">Please choose one of the following commands:</string>
    <string name="View_button">View Counters</string>
    <string name="Add_button">Add a new Counter</string>
    <string name="Exit_button">Exit the App</string>
    <string name="Add_instruct">Enter the name of the counter:</string>
    <string name="add_f_n">Finish Add</string>
    <string name="rename_ins">Rename a Counter</string>
    <string name="ok">OK</string>
    <string name="increment_b">Increment</string>
    <string name="reset_b">Reset</string>
    <string name="rename_b">Rename</string>
    <string name="remove_b">Remove</string>
    <string name="back_b">Back</string>
    <string name="stat_b">Summarize counts by time period</string>
    <string name="title_activity_view_menu">View_menu</string>
    <string name="stat_view_ins">Please choose one of the following commands:</string>
    <string name="view_hour_b">view counts per hour </string>
    <string name="view_day_b">view counts per day</string>
    <string name="view_week_b">view counts per week</string>
    <string name="view_month_b">view counts per month</string>
    <string name="title_activity_stat_view">Stat_view</string>

</resources>
