<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".View_menu" >

    <TextView
        android:id="@+id/view_ins"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stat_view_ins"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/view_per_hour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_hour_b" />

    <Button
        android:id="@+id/view_per_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_day_b" />

    <Button
        android:id="@+id/view_per_week"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_week_b" />

    <Button
        android:id="@+id/view_per_month"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_month_b" />

</LinearLayout>
