<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/instruction" />

    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title" >

        <LinearLayout
            android:id="@+id/Linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/View"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/View_button" />

            <Button
                android:id="@+id/Add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Add_button" />

            <Button
                android:id="@+id/Exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Exit_button" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>